--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,9 +4,12 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-
+<div class="main-content">
 {{>header}}
+<p>This site was created by Hmammad.It uses data from mapbox.com and darksy.net</p>
 <img src='/img/me.jpg'>
 {{>footer}}
+</div>
+
     </body>
 </html>
